<resources>
    <string name="app_name">Pacts</string>
    <string name="title_activity_register">Register</string>


    <!-- Commonly used strings -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Pacts</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="type">Type</string>
    <string name="create">Create</string>


    <string name="title_section_pacts">Pacts</string>
    <string name="title_section_profile">Profile</string>
    <string name="title_section_friends">Friends</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <!-- Menus -->
    <string name="action_add_friend">Add friend</string>
    <string name="action_view_friend_requests">Friend requests</string>
    <string name="action_create_pact">Create pact</string>
    <string name="action_view_pact_requests">Pact requests</string>


    <!-- Friends -->
    <string name="title_find_user_by_email">Add new friend</string>
    <string name="title_manage_friend_requests"> Manage friend requests</string>
    <string name="send_request">Send friend request</string>
    <string name="request_sent">Your request was sent</string>
    <string name="error_user_does_not_exist">The user doesn\'t exist</string>
    <string name="error_cannot_friend_yourself">You can\'t be your own friend</string>
    <string name="error_already_friends">That user is already your friend</string>
    <string name="action_accept_friend_request">Accept</string>
    <string name="action_reject_friend_request">Reject</string>
    <string name="info_user_request_accepted">The request was accepted</string>
    <string name="info_user_request_rejected">The request was rejected</string>

    <!-- Profile -->
    <string name="placeholder_name_surname">Test Testing</string>

    <!-- Log out -->
    <string name="logout">Log out</string>
    <string name="logout_confirmation">Do you really want to log out?</string>

    <!-- Pacts -->
    <string name="pact_name">Name</string>
    <string name="pact_description">Description</string>
    <string name="action_create_pact_type">Create type</string>
    <string name="pact_is_promise">Is this a promise?</string>
    <string name="create_pact_type">Create type</string>
    <string name="select_pact_type">Select type</string>
    <string name="info_pact_type_created">The pact type was created</string>
    <string name="info_pact_created">The pact was created</string>
    <string name="info_pact_accepted">The pact was accepted</string>
    <string name="info_pact_rejected">The pact was rejected</string>
    <string name="error_no_pact_types">Create a pact type first</string>
    <string name="info_pact_request_not_accepted">This pact isn\'t accepted.</string>
    <!-- This is for getting sentences like "A blood pact with Peter" and then translate them-->
    <string name="pact_type_and_user_intro">A</string>
    <string name="pact_type_and_user_middle">pact with</string>
    <string name="pact_type_promise">A promise with</string>
    <string name="pact_info_creation_date">Created on</string>
    <string name="pact_info_fulfill_date">Fulfilled on</string>
    <string name="pact_info_cancel_date">Canceled on</string>
    <string name="action_accept_pact">Accept pact</string>
    <string name="action_reject_pact">Reject pact</string>


</resources>
