<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="es.potrayarrick.pacts.CreatePactFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pact_name"
            android:hint="@string/pact_name"
            android:layout_gravity="center_horizontal|top" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/pact_description"
            android:hint="@string/pact_description"
            android:layout_gravity="center_horizontal|top"
            android:layout_below="@+id/pact_name"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pact_description"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/select_pact_type"
                android:id="@+id/pact_type_hint"
                android:gravity="center_vertical"
                android:layout_marginLeft="8dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pact_type"
                android:layout_below="@+id/pact_description"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pact_is_promise"
            android:id="@+id/pact_is_promise"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_create_pact"
            android:id="@+id/create_pact_button"
            android:layout_below="@+id/pact_is_promise"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</FrameLayout>
