<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="es.potrayarrick.pacts.PactFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/pact_type_and_user" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Small Text"
            android:id="@+id/pact_description"
            android:layout_below="@+id/pact_type_and_user"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/pact_date"
            android:layout_below="@+id/pact_description"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pact_not_accepted_layout"
            android:layout_below="@+id/pact_date"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/primary_dark_material_light"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="false"
                android:id="@+id/separator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/info_pact_request_not_accepted"
                android:id="@+id/unaccepted_pact_text"
                android:layout_below="@+id/separator"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/unaccepted_pact_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_accept_pact"
                    android:id="@+id/accept_pact_button"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_reject_pact"
                    android:id="@+id/reject_pact_button" />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</FrameLayout>
